# 2024-P1-arj-sng

./: README.md  pyproject.toml
todo/views/: routes.py
