[tool.poetry]
name = "2024-p1-arj-sng"
version = "0.1.0"
description = ""
authors = ["Arjun Singh <141088828+arj-sng@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3"
Flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
